--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -10,28 +10,28 @@
       <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group" ng-repeat="option in configOptions">
         <label class="control-label col-sm-2">{{ option.name }}: </label>
         <div class="col-sm-10">
-          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
+          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
             <input class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
             <span class="" style="margin-left: 17px;">{{ value.name }}</span>
           </label>
-          <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input class="inline" style="padding-top: 3px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="0.10"  id="{{option.id}}" name="{{option.id}}"/>
+          <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" >
+            <input class="inline form-control col-sm-1" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="0.10"  id="{{option.id}}" name="{{option.id}}"/>
           </label>
-          <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <input class="inline form-control" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="1" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
+          <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
+            <input class="inline form-control col-sm-1" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="1" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
           </label>
-          <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline" style="padding-top: 3px;" data-initialize="radio" >
-            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="inline form-control" style="height: 28px;">
+          <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
+            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="inline form-control col-sm-1" style="height: 28px; width: 146px;">
               <option value=""></option>
               <option ng-repeat="optionValue in option.values"
                       value="{{ optionValue.choiceCode }}">{{ optionValue.name }}
               </option>
             </select>
           </label>
-        </div>
-        <div class="col-sm-4">
-          <div class="col-xs-4 col-sm-4" style="margin: 27px 18px -2px;">
-            <date-picker-field disable="isDisabled()" form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate"></date-picker-field>
+          <div class="col-sm-12">
+            <div class="col-sm-1">
+              <date-picker-field form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate"></date-picker-field>
+            </div>
           </div>
         </div>
       </div>
