--- a/app/views/station-create.html
+++ b/app/views/station-create.html
@@ -104,8 +104,8 @@
 
       <div class="col-xs-12 col-sm-6">
         <date-picker-field
-          ng-if="dataReady && !isInFutureWithMaxStartDateBeforeToday(station.maxStartDate, station.startDate)"
-          disable="isDisabled() || isInFutureWithMaxStartDateBeforeToday(station.maxStartDate, station.startDate)"
+          ng-if="dataReady && !isInFutureWithMaxStartDateBeforeToday(maxStartDate, station.startDate)"
+          disable="isDisabled() || isInFutureWithMaxStartDateBeforeToday(maxStartDate, station.startDate)"
           form="stationCreateForm"
           name="EffectiveFrom"
           label="Effective From"
@@ -115,8 +115,8 @@
           end-date="maxStartDate">
         </date-picker-field>
         <date-picker-field
-          ng-if="dataReady && isInFutureWithMaxStartDateBeforeToday(station.maxStartDate, station.startDate)"
-          disable="isDisabled() || isInFutureWithMaxStartDateBeforeToday(station.maxStartDate, station.startDate)"
+          ng-if="dataReady && isInFutureWithMaxStartDateBeforeToday(maxStartDate, station.startDate)"
+          disable="isDisabled() || isInFutureWithMaxStartDateBeforeToday(maxStartDate, station.startDate)"
           form="stationCreateForm"
           name="EffectiveFrom"
           label="Effective From"
