--- a/app/views/item-list.html
+++ b/app/views/item-list.html
@@ -63,7 +63,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
 
               <div class="form-group">
-                <label for="item-onboard-name">Onboard Name</label>
+                <label for="item-onboard-name">ePOS Display Name</label>
                 <input ng-model="search.onBoardName" type="text" class="form-control" id="item-onboard-name"
                        placeholder="Turkey Delight">
               </div>
