--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -7,17 +7,17 @@
     </div>
 
     <fieldset>
-      <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group col-sm-12" ng-repeat="option in configOptions">
-        <label class="control-label col-sm-2">{{ option.name }}: </label>
+      <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group col-sm-12" style="margin-top: 10px;" ng-repeat="option in configOptions">
+        <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
-          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
+          <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline " style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
             <input class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
             <span class="" style="margin-left: 17px;">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" >
             <input class="inline form-control col-sm-1" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="0.01"  id="{{option.id}}" name="{{option.id}}"/>
           </label>
-          <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
+          <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline col-sm-12" style="max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
             <input class="inline form-control col-sm-2" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="1" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
           </label>
           <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
@@ -28,11 +28,11 @@
               </option>
             </select>
           </label>
-          <div class="col-sm-12" style="margin-top: 2px;">
-            <div class="col-sm-2">
-              <date-picker-field form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate" custom-effective="true"></date-picker-field>
-            </div>
-          </div>
+          <!--<div class="col-sm-12" style="margin-top: 2px;">-->
+            <!--<div class="col-sm-2">-->
+              <!--<date-picker-field form="form" name="EffectiveFrom" label="Start Date" ng-model="formData[option.ngModelIdentifier].startDate" custom-effective="true"></date-picker-field>-->
+            <!--</div>-->
+          <!--</div>-->
         </div>
       </div>
     </fieldset>
