--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -11,17 +11,17 @@
         <span class="control-label col-sm-2">{{ option.name }}: </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline " style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
-            <input class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
+            <input ng-disabled="!isCRUD" class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
             <span class="" style="margin-left: 17px;">{{ value.name }}</span>
           </label>
           <label ng-if="option.inputType === 'PERCENTAGE_NUMBER'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" >
-            <input class="inline form-control col-sm-1" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="0.01"  id="{{option.id}}" name="{{option.id}}"/>
+            <input ng-disabled="!isCRUD" class="inline form-control col-sm-1" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="0.01"  id="{{option.id}}" name="{{option.id}}"/>
           </label>
           <label ng-if="option.inputType === 'NUMBER'" class="radio-custom radio-inline col-sm-12" style="max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
-            <input class="inline form-control col-sm-2" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="1" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
+            <input ng-disabled="!isCRUD" class="inline form-control col-sm-2" style="padding-top: 3px; width: 146px;" ng-model="formData[option.ngModelIdentifier].value"  type="number" step="1" id="{{option.id}}" name="{{option.ngModelIdentifier}}"/>
           </label>
           <label ng-if="option.inputType === 'SELECT'" class="radio-custom radio-inline col-sm-12" style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 3px; margin-bottom: 10px;"  >
-            <select name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="inline form-control col-sm-2" style="height: 28px; width: 146px;">
+            <select ng-disabled="!isCRUD" name="{{option.ngModelIdentifier}}" ng-model="formData[option.ngModelIdentifier].value" class="inline form-control col-sm-2" style="height: 28px; width: 146px;">
               <option value=""></option>
               <option ng-repeat="optionValue in option.values"
                       value="{{ optionValue.choiceCode }}">{{ optionValue.name }}
@@ -38,8 +38,8 @@
     </fieldset>
 
     <div class="modal-footer">
-      <button class="btn btn-primary" type="submit" >Save</button>
-      <button class="btn btn-danger" type="button" ng-click="cancel()">Cancel</button>
+      <button ng-show="isCRUD" class="btn btn-primary" type="submit" >Save</button>
+      <button ng-show="isCRUD" class="btn btn-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
   </form>
 </div>
