--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -8,7 +8,7 @@
 
     <fieldset>
       <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group col-sm-12" style="margin-top: 10px;" ng-repeat="option in configOptions">
-        <span class="control-label col-sm-2">{{ option.name }}: </span>
+        <span class="control-label col-sm-2">{{ option.name }} <i class="fa fa-info-circle" style="font-size:18px;color: #5bc0de"></i> : </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline " style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
             <input ng-disabled="!isCRUD" class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
