--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -8,7 +8,16 @@
 
     <fieldset>
       <div ng-if="!isFeatureOptionsLoadingInProgress" class="form-group col-sm-12" style="margin-top: 10px;" ng-repeat="option in configOptions">
-        <span class="control-label col-sm-2">{{ option.name }} <i class="fa fa-info-circle" style="font-size:18px;color: #5bc0de"></i> : </span>
+        <span class="control-label col-sm-2">{{ option.name }}
+          <i class="fa fa-info-circle"
+             style="font-size:18px;color: #5bc0de"
+             tooltip="Tooltip Right"
+             tooltip-placement="right"
+             tooltip-trigger="click"
+          >
+
+          </i> :
+        </span>
         <div class="col-sm-10">
           <label ng-if="option.inputType === 'RADIO_BUTTON'" ng-repeat="value in option.values" class="radio-custom radio-inline " style="padding-top: 3px; max-height: 31px; padding-left: 15px; margin-top: 5px; margin-bottom: 10px;" data-initialize="radio" >
             <input ng-disabled="!isCRUD" class="inline" style="margin-left: -3px;" ng-model="formData[option.ngModelIdentifier].value"  type="radio" id="{{option.id + '-' + $index}}" name="{{option.ngModelIdentifier}}" ng-value="value.value"/>
@@ -61,4 +70,16 @@
     </ul>
   </div>
 </div>
+
+<script type="text/ng-template" id="newReferenceTemplate.html">
+  <label>Title</label>
+  <br>
+  <input ng-model="link.Title">
+  <br>
+  <label>Url</label>
+  <br>
+  <input ng-model="link.Url">
+  <br>
+  <i class="fa fa-floppy-o" ng-click="xxxx()"> Save </i>
+</script>
 
