--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -32,7 +32,7 @@
             </div>
           </div>
 
-          <div class="form-group" ng-if="hasSessionToken">
+          <div class="form-group" ng-if="hasSessionToken" ng-class="{ 'has-error' : changePasswordForm.currentPassword.$invalid && submitted }">
             <label for="currentPassword" class="col-sm-4 control-label">Current Password</label>
 
             <div class="col-sm-8">
@@ -59,7 +59,7 @@
         </div>
         <div class="modal-footer">
           <a href="/#/" class="btn btn-default">Cancel</a>
-          <button type="submit" class="btn btn-primary">Change</button>
+          <button type="submit" class="btn btn-primary" ng-click="submitted = true">Change</button>
         </div>
       </div>
     </div>
