--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -51,7 +51,7 @@
           <div class="form-group">
             <label for="newPasswordConfirm" class="col-sm-4 control-label">Confirm New Password</label>
 
-            <div class="col-sm-8">
+            <div class="col-sm-8" ng-class="{ 'has-error' : changePasswordForm.newPasswordConfirm.$invalid && submitted }">
               <input name="newPasswordConfirm" required="true" custom-validity custom-pattern="password" type="password" class="form-control" id="newPasswordConfirm"
                      placeholder="Confirm New Password" ng-model="credentials.newPasswordConfirm"/>
             </div>
