--- a/app/views/change-password.html
+++ b/app/views/change-password.html
@@ -43,7 +43,7 @@
           <div class="form-group">
             <label for="newPassword" class="col-sm-4 control-label">New Password</label>
 
-            <div class="col-sm-8" ng-class="{ 'has-error' : changePasswordForm.newPassword.$invalid && submitted }">
+            <div class="col-sm-8" ng-class="{ 'has-error' : (changePasswordForm.newPassword.$invalid || passwordMismatch) && submitted }">
               <input name="newPassword" required="true" custom-validity custom-pattern="password" type="password" class="form-control" id="newPassword" placeholder="New Password"
                      ng-model="credentials.newPassword"/>
             </div>
@@ -51,7 +51,7 @@
           <div class="form-group">
             <label for="newPasswordConfirm" class="col-sm-4 control-label">Confirm New Password</label>
 
-            <div class="col-sm-8" ng-class="{ 'has-error' : changePasswordForm.newPasswordConfirm.$invalid && submitted }">
+            <div class="col-sm-8" ng-class="{ 'has-error' : (changePasswordForm.newPasswordConfirm.$invalid || passwordMismatch) && submitted }">
               <input name="newPasswordConfirm" required="true" custom-validity custom-pattern="password" type="password" class="form-control" id="newPasswordConfirm"
                      placeholder="Confirm New Password" ng-model="credentials.newPasswordConfirm"/>
             </div>
