--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -10,33 +10,7 @@
     <fieldset ng-if="!isFeatureOptionsLoadingInProgress">
       <div class="form-group col-sm-12" style="margin-top: 10px;" ng-repeat="option in configOptions">
         <span class="control-label col-sm-2">{{ option.name }}
-          <!--<i class="fa fa-info-circle"-->
-             <!--style="font-size:18px;color: #5bc0de"-->
-             <!--tooltip="{{toolTipMessage(option)}}"-->
-             <!--tooltip-placement="right"-->
-             <!--tooltip-trigger="click"-->
-          <!--&gt;-->
-          <!--</i>-->
-          <!--<i-->
-            <!--class="fa fa-info-circle"-->
-            <!--data-placement="right"-->
-
-            <!--style="font-size:18px;color: #5bc0de"-->
-            <!--onclick="$(this).tooltip('show')"-->
-            <!--title="{{toolTipMessage(option)}}"-->
-            <!--data-html="true"-->
-          <!--&gt;-->
-          <!--tooltip-trigger="click"-->
-          <!--</i>-->
-
-          <!--<i-->
-          <!--class="fa fa-info-circle tooltip"-->
-          <!--style="font-size:18px;color: #5bc0de"-->
-          <!--title="{{toolTipMessage(option)}}"-->
-          <!--onclick="$(this).tooltip({trigger: 'focus'});"-->
-          <!--&gt;-->
-          <!--</i>-->
-          <button type="button" title="{{toolTipMessage(option)}}" class="fa fa-info-circle tooltip-focus" style="font-size:18px;color: #5bc0de" onclick="none"></button>
+          <button type="button" title="{{toolTipMessage(option)}}" class="fa fa-info-circle tooltip-focus" style="font-size:18px;color: #5bc0de" ></button>
           :
         </span>
         <div class="col-sm-10">
