--- a/app/views/category-list.html
+++ b/app/views/category-list.html
@@ -63,6 +63,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
+        <button type="button" class="btn btn-default" ng-disabled="!showClearButton()" ng-click="clearSearch()">Clear</button>
       </div>
       </form>
       
