--- a/app/views/directives/epos-config-form-single-module.html
+++ b/app/views/directives/epos-config-form-single-module.html
@@ -1,6 +1,16 @@
-<li ng-if="singleModule.optionTypeId === 1"> <!-- CheckBox -->
-  <input ng-disabled="areInputsDisabled" type="checkbox" class="maring-right-5px" id="{{singleModule.id}}" ng-model="model.checkbox[singleModule.id]"/>
-  <label class="epos-config-label">{{singleModule.name}}</label>
+<li >
+  <span ng-if="singleModule.optionTypeId === 1"> <!-- CheckBox -->
+    <input ng-disabled="areInputsDisabled" type="checkbox" class="maring-right-5px" id="{{singleModule.id}}" ng-model="model.checkbox[singleModule.id]"/>
+    <label class="epos-config-label">{{singleModule.name}}</label>
+  </span>
+
+  <span ng-if="singleModule.optionTypeId === 2"> <!-- RadioButton -->
+
+  </span>
+
+  <span ng-if="singleModule.optionTypeId === 3"> <!-- Text -->
+
+  </span>
 
   <button
     ng-if="singleModule.description"
@@ -18,11 +28,11 @@
     <span class="glyphicon glyphicon-info-sign text-info"></span>
   </button>
 </li>
-<li ng-if="singleModule.optionTypeId === 2"> <!-- RadioButton -->
+<li ng-if="singleModule.optionTypeId === 2">
   <input ng-disabled="areInputsDisabled" type="radio" class="maring-right-5px" id="{{singleModule.id}}" name="{{singleModule.parentId}}" ng-model="model.radioButton[singleModule.parentId]" value="{{singleModule.id}}"/>
   <label class="epos-config-label">{{singleModule.name}}</label>
 </li>
-<li ng-if="singleModule.optionTypeId === 3">  <!-- Text -->
+<li ng-if="singleModule.optionTypeId === 3">
   <label class="epos-config-label maring-right-5px">{{singleModule.name}}</label>
   <input ng-disabled="areInputsDisabled" type="text" id="{{singleModule.id}}" ng-model="model.text[singleModule.id]"/>
 </li>
