--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -56,7 +56,7 @@
         </div>
 
         <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-                aria-controls="search-collapse" id="filterTransactionListId">
+                aria-controls="search-collapse">
           <span class="fa fa-filter" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
@@ -229,8 +229,8 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearch()" id="clearTransactionListId">Clear</button>
-          <button type="submit" class="btn btn-primary" id="searchTransactionListId">Search</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearch()">Clear</button>
+          <button type="submit" class="btn btn-primary">Search</button>
         </div>
       </form>
     </div>
