--- a/app/views/company-receipt-create.html
+++ b/app/views/company-receipt-create.html
@@ -5,7 +5,7 @@
         <h2 class="view-name">{{viewName}}</h2>
       </div>
       <div class="col-xs-6 text-right">
-        <a class="btn btn-default" ng-href="#/company-receipt-list" class="btn" ng-show="readOnly">Back</a>
+        <a class="btn btn-default" ng-href="#/company-receipts" class="btn" ng-show="readOnly">Back</a>
       </div>
     </div>
     <error-dialog form-object="companyReceiptForm" error-response="errorResponse" display="displayError">
@@ -19,8 +19,9 @@
               <div class="form-group">
                 <label for="receiptType">Receipt Type *</label>
                 <select name="receiptType" id="receiptType" class="form-control"
-                        ng-options="receiptType.id as receiptType.receiptTypeName for receiptType in receiptTypes"
+                        ng-options="receiptType.id as receiptType.displayName for receiptType in receiptTypes"
                         ng-model="companyReceipt.receiptTypeId"
+                        ng-disabled="isDisabled()"
                         required>
                   <option value="">Please Select Receipt Type</option>
                 </select>
