--- a/app/views/company-receipt-list.html
+++ b/app/views/company-receipt-list.html
@@ -4,7 +4,7 @@
       <h2 class="view-name">Company Receipts</h2>
     </div>
     <div class="col-xs-8 text-right">
-      <a href="#/company-receipt-create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Company Receipt</span></a>
+      <a href="#/company-receipts/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create Company Receipt</span></a>
       <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
               aria-expanded="false"
               aria-controls="search-collapse">
